dataaccess configuration