@@ -2,9 +2,7 @@ package com.fmattaperdomo.order.service.dataaccess.store.mapper;
 
 import com.fmattaperdomo.dataaccess.store.entity.StoreEntity;
 import com.fmattaperdomo.dataaccess.store.exception.StoreDataAccessException;
-import com.fmattaperdomo.domain.valueobject.Money;
-import com.fmattaperdomo.domain.valueobject.ProductId;
-import com.fmattaperdomo.domain.valueobject.StoreId;
+import com.fmattaperdomo.domain.valueobject.*;
 import com.fmattaperdomo.order.service.domain.entity.Product;
 import com.fmattaperdomo.order.service.domain.entity.ProductStore;
 import com.fmattaperdomo.order.service.domain.entity.Store;
@@ -17,9 +15,9 @@ import java.util.stream.Collectors;
 @Component
 public class StoreDataAccessMapper {
 
-    public List<UUID> storeToStoreProducts(Store store) {
+    public List<UUID> storeToProductsStore(Store store) {
         return store.getProductsStore().stream()
-                .map(product -> product.getId().getValue())
+                .map(productStore -> productStore.getId().getValue())
                 .collect(Collectors.toList());
     }
 
@@ -27,18 +25,24 @@ public class StoreDataAccessMapper {
         StoreEntity storeEntity =
                 storeEntities.stream().findFirst().orElseThrow(() ->
                         new StoreDataAccessException("Store could not be found!"));
-/*** REVISAR
-        List<ProductStore> storeProducts = storeEntities.stream().map(entity ->
-                new ProductStore(new ProductId(entity.getProductId()), entity.getStoreName(),
-                        new Money(entity.getProductStorePrice()))).toList();
+
+        List<ProductStore> productsStore = storeEntities.stream().map(entity -> ProductStore.builder()
+                        .productStoreId(new ProductStoreId(entity.getProductStoreId()))
+                        .storeId(new StoreId(entity.getStoreId()))
+                        .price(new Money(entity.getProductStorePrice()))
+                        .barcode(entity.getProductStoreBarcode())
+                        .stockQuantity(entity.getProductStoreStockQuantity())
+                        .supplierId(new SupplierId(entity.getProductStoreSupplierId()))
+                        .product(new Product(new ProductId(entity.getProductStoreProductId())))
+                        .build())
+                .collect(Collectors.toList());
 
         return Store.builder()
                 .storeId(new StoreId(storeEntity.getStoreId()))
-                ..productStore(storeEntity.ProductsStore)
-                 .active(storeEntity.getStoreActive())
+                .name(storeEntity.getStoreName())
+                .description(storeEntity.getStoreDescription())
+                .productsStore(productsStore)
+                .active(storeEntity.getStoreActive())
                 .build();
- }
- ***/
-        return null;
     }
 }
